Use dedicated exceptions in the MatchboxEngine initialization